<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@+id/mobile_navigation"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	app:startDestination="@+id/navigation_home"
	>

	<fragment
		android:id="@+id/navigation_home"
		android:name="com.miwas.domakruche.ui.home.HomeFragment"
		android:label="@string/title_home"
		tools:layout="@layout/fragment_home"
		/>

	<fragment
		android:id="@+id/navigation_dashboard"
		android:name="com.miwas.domakruche.ui.prizes.PrizesFragment"
		android:label="@string/title_prizes"
		tools:layout="@layout/fragment_prizes"
		/>

	<fragment
		android:id="@+id/navigation_notifications"
		android:name="com.miwas.domakruche.ui.leaderboard.LeaderBoardFragment"
		android:label="@string/title_leaders"
		tools:layout="@layout/fragment_leaderboard"
		/>
</navigation>
