<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginTop="?attr/actionBarSize"
	tools:context=".ui.home.HomeFragment"
	>

	<Button
		android:id="@+id/im_home_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="20dp"
		android:background="@drawable/rounded_button_active"
		android:text="@string/im_home_button_text"
		android:textColor="#ffffff"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		/>

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="100dp"
		android:src="@drawable/points_bg"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<ProgressBar
		android:id="@+id/progress_bar"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="?actionBarSize"
		android:gravity="center"
		android:indeterminate="true"
		android:indeterminateTint="#d88c51"
		android:indeterminateTintMode="src_atop"
		app:layout_constraintBottom_toTopOf="@+id/points_counter_text_view"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<TextView
		android:id="@+id/address_text_view"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="?actionBarSize"
		android:layout_marginEnd="30dp"
		android:layout_marginStart="20dp"
		android:fontFamily="@font/georgia_regular"
		android:gravity="center"
		android:textSize="20sp"
		app:layout_constraintBottom_toTopOf="@+id/points_counter_text_view"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<TextView
		android:id="@+id/timer_text_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="20dp"
		android:fontFamily="@font/georgia_regular"
		android:text="@string/timer_start_time"
		android:textSize="40sp"
		app:layout_constraintBottom_toTopOf="@+id/im_home_button"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		/>

	<TextView
		android:id="@+id/points_counter_text_view"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:fontFamily="@font/georgia_regular"
		android:text="@string/default_points_count"
		android:textAlignment="center"
		android:textColor="@color/colorAccent"
		android:textSize="60sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>
</androidx.constraintlayout.widget.ConstraintLayout>